feat: adjust css for article description

--- a/src/components/Articles.astro
+++ b/src/components/Articles.astro
@@ -66,8 +66,9 @@ const posts = ((await getCollection("blog")) as Array<CollectionEntry<"blog"> & 
 
   .article div {
     margin-top: 0.2rem;
-    font-size: 0.9rem;
-    font-weight: 600;
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--colorTextSubtle);
   }
 
   .divisor {
