feat: add macoratti link

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -25,11 +25,13 @@ import Page from "../layouts/Page.astro";
       googling, I stumbled upon Visual Basic 98, which let me create my own
       software. I started tinkering with it right away and quickly became fully
       immersed in the process of building programs. I spent countless nights
-      downloading source code, mainly from Macoratti’s site, and it was always
-      the same thing: I would download the code, modify it until it broke, and
-      then figure out how and why it had broken. Without even noticing, I had
-      built a solid understanding of programming logic simply by downloading and
-      breaking programs for fun.
+      downloading source code, mainly from <a
+        href="https://www.macoratti.net/"
+        target="_blank">Macoratti's site</a
+      >, and it was always the same thing: I would download the code, modify it
+      until it broke, and then figure out how and why it had broken. Without
+      even noticing, I had built a solid understanding of programming logic
+      simply by downloading and breaking programs for fun.
     </p>
 
     <p>
