fix: small text fix

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -39,10 +39,10 @@ import Page from "../layouts/Page.astro";
       college, but it turned out to be a difficult experience due to personal
       circumstances. I decided to leave and ended up spending the next five
       years working in photography as both a photographer and as an account
-      executive . That role helped me develop soft skills and a keen sense of
+      executive. That role helped me develop soft skills and a keen sense of
       aesthetics and design. Even in roles that did not require any programming
-      at all, I could not resist automating tasks with Python, PHP, or Adobe
-      Photoshop Scripts whenever possible.
+      at all, I could not resist automating tasks with Python, PHP, or even
+      Adobe Photoshop Scripts whenever possible.
     </p>
 
     <p>
