feat: add back to home button on post

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -45,6 +45,8 @@ const { title, description, pubDate, updatedDate } = data;
         </div>
 
         <slot />
+
+        <a href="/">Back to Home</a>
       </article>
     </main>
 
