--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -83,6 +83,10 @@ h3::before {
   background: var(--colorBrand);
 }
 
+img {
+  -webkit-user-drag: none;
+}
+
 @media (max-width: 720px) {
   body {
     font-size: 1.1rem;
