feat: add post beyond mediocrity

--- a/src/styles/blogpost.css
+++ b/src/styles/blogpost.css
@@ -6,7 +6,6 @@ img {
 	max-width: 100%;
 	height: auto;
 	border-radius: 8px;
-	margin: 0 auto;
 }
 
 figcaption {
@@ -17,7 +16,8 @@ figcaption {
 }
 
 figure {
-	margin: 2rem 0;
+	margin: 4rem auto 3.5rem auto;
+	max-width: 400px;
 }
 
 .github-dark {
