feat: style adjustment on headings

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -64,6 +64,11 @@ const { title, description, pubDate, updatedDate } = data;
     padding: 1em;
   }
 
+  article a {
+    margin-top: 3em;
+    display: block;
+  }
+
   .title {
     margin-bottom: 1em;
     padding: 1em 0;
